# coarse_to_alpha

./: MANIFEST.in  README.md  break_index.py  estimate.py  pyproject.toml  setup.cfg  setup.py  utils.py
src/alphax.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/alphax_anishpyan.egg-info/: PKG-INFO  SOURCES.txt
